[package]
name = "liveness-check"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
cookie_store = "0.21.1"
cron = "0.13.0"
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
